tests/NormalTests/paczka1/fuzzy1/23986912.err
Error in line 5: S732 S732 74,4
Error in line 9: S732 A549 58,7
Error in line 6: 4B5LZbbd1mH S732 99,9
Error in line 18: S732 S732 64,8
Error in line 34: QdZ.GolUV A549 75,0
Error in line 20: gJyy A153 71,9
